# paperchat

./: .gitignore  CMakeLists.txt  README.md
src/: util.c  util.h
src/client/: client.c  client.h  main.c
src/server/: main.c  server.c  server.h  util.c  util.h
